# Foxlang

./: .exrc  .gitignore  CMakeLists.txt  README.md  count.py  fox  fox.cpp
docs/: building.md  features.md  keywords.md
examples/fibonacci/: build.json
examples/fibonacci/src/: main.fox
examples/hello-world/: build.json
examples/hello-world/src/: main.fox
include/: action_char.cpp  action_char.hpp  action_number.cpp  action_number.hpp  action_string.cpp  action_string.hpp  arg_build.hpp  arg_compile.hpp  arg_help.hpp  arg_new.hpp  arg_version.hpp  argument.cpp  argument.hpp  argument_action.hpp  brace_stack.hpp  build_parser.cpp  build_parser.hpp  command_exec.cpp  command_exec.hpp  common.cpp  common.hpp  error.cpp  error.hpp  error_messages.cpp  error_messages.hpp  expected_tokens.hpp  file.cpp  file.hpp  import_handler.cpp  import_handler.hpp  json.hpp  keywords.hpp  lexer.cpp  lexer.hpp  lexer_action.hpp  parser.cpp  parser.hpp  scope.cpp  scope.hpp  standard_library.cpp  (+4 more)
